<resources>
    <string name="app_name">Unit Converter</string>
    <string name="length">Length</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="length_converter">Length Converter</string>
    <string name="temperature_converter">Temperature</string>
    <string name="mass_converter">Mass</string>
    <string name="frequency_converter">Frequency Converter</string>
    <string name="unit_onversion_among_the_length_units">Unit conversion among the length units</string>
    <string name="unit_onversion_among_the_temperature">Unit conversion among the temperature</string>
    <string name="unit_onversion_among_the_mass">Mass conversion</string>
    <string name="unit_onversion_among_the_liquid">Unit conversion among the liquid units</string>
    <string name="unit_onversion_among_the_frequency">Unit conversion among the frequency units</string>
    <string name="unit_onversion_among_the_speed">Unit conversion among the speed units</string>
    <string name="liquid_converter">Liquid Converter</string>
    <string name="speed_converter">Speed Converter</string>
    <string name="cm">CM</string>
    <string name="enter_cm_value">Enter CM value</string>
    <string name="meter">Meter</string>
    <string name="convert">Convert</string>
    <string name="centimeter_to_merter">Centimeter to Merter</string>
    <string name="_0_00">0.00</string>
    <string name="mass_converter_text">Mass Converter</string>
    <string name="kilogram">KiloGram</string>
    <string name="gram">Gram</string>
    <string name="enter_gram_value">Enter gram value</string>
    <string name="kilo_gram">Kilo gram</string>
    <string name="temperature_converter_text">Temperature Converter</string>
    <string name="celcius">Celcius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="liquid_converter_text">Liquid Converter</string>
    <string name="milli_litter">Milli litter</string>
    <string name="litter">Litter</string>
    <string name="frequency_converter_text">Frequency Converter</string>
    <string name="hertz">Hertz</string>
    <string name="kilohertz">Kilohertz</string>
    <string name="speed_converter_text">Speed Converter</string>
    <string name="kilometer_per_hour">Kilometer per hour</string>
    <string name="enter_km_h">Enter km/h</string>
    <string name="meter_per_hour">Meter per hour</string>
    <string name="enter_hertz_value">Enter hertz value</string>
    <string name="enter_ml_value">Enter ml value</string>
    <string name="enter_celcius_value">Enter celcius value</string>
</resources>