<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Liquid_Converter">

    <TextView
        android:id="@+id/txtHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquid_converter_text"
        android:textSize="28sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtMilli"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHint"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milli_litter"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edtMilli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ml_value"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMilli"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtLitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMilli"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/litter"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/valueLitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLitter"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="28sp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnLiquid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/valueLitter"
        android:text="@string/convert"/>

</androidx.constraintlayout.widget.ConstraintLayout>