<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frequency_Converter">

    <TextView
        android:id="@+id/txtHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency_converter_text"
        android:textSize="28sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtHertz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHint"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hertz"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edtHertz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hertz_value"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtHertz"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtKilihertz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHertz"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilohertz"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/valueKiloHertz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKilihertz"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="28sp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/valueKiloHertz"
        android:text="@string/convert"/>

</androidx.constraintlayout.widget.ConstraintLayout>