<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Speed_Converter">

    <TextView
        android:id="@+id/txtHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_converter_text"
        android:textSize="28sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtKilometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHint"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometer_per_hour"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edtKiloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_km_h"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtKilometer"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtMeterPer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtKiloper"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_per_hour"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/valueMeterPer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMeterPer"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="28sp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/valueMeterPer"
        android:text="@string/convert"/>

</androidx.constraintlayout.widget.ConstraintLayout>