<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Temperature_Converter">

    <TextView
        android:id="@+id/txtHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_converter_text"
        android:textSize="28sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtCelcius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHint"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celcius"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edtCelcius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_celcius_value"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCelcius"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txtFahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCelcius"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        android:textColor="@color/black"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/valueFahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFahrenheit"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="28sp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/valueFahrenheit"
        android:text="@string/convert"/>

</androidx.constraintlayout.widget.ConstraintLayout>